# Pepper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent/: briefs.py  calendar_tools.py  capability_registry.py  chat_turn_logger.py  commitment_followup.py  config.py  core.py  db.py  email_tools.py  error_classifier.py  identity.py  identity_diffs.py  imessage_tools.py  life_context.py  llm.py  local_filesystem_tools.py  main.py  mcp_client.py  memory.py  memory_http.py  memory_tools.py  priority_grader.py  query_intents.py  query_router.py  scheduler.py  skill_reviewer.py  skills.py  slack_tools.py  strategies_tools.py  strategy_diffs.py  telegram_bot.py  tool_router.py  wait_feedback_http.py  wait_tool.py  waits_http.py  whatsapp_tools.py
agents/: README.md  __init__.py  runner.py
docs/: ARCHITECTURE.md  CONTINUOUS_IMPROVEMENT_PLAN.md  GUARDRAILS.md  INFRA_GUIDELINES.md  LLM_STRATEGY.md  MACOS_DESKTOP_APP_PLAN.md  PEPPER_IDENTITY.md.example  PRINCIPLES.md  RELEASE_NOTES_v0.2.md  ROADMAP.md  SCHEDULER_PROMPT.md  SOUL.md  SUBSYSTEMS.md  WISHLIST.md  continuity-of-self-rubric.md  optimizer-policy.md  reflection-eval-rubric.md  reflection-loop-design.md  trace-schema.md  wait-action-feedback.md
eval_results/: README.md  continuity_template.csv  e06-continuity-baseline.json
scripts/: package_hermes4_ollama.sh  reconnect_whatsapp.sh  reset_memory.sh  run_retrieval_eval.py  score_continuity.py
skills/: commitment_check.md  draft_reply_to_contact.md  morning_brief.md  prep_for_meeting.md  weekly_review.md
(+146 files in other folders)
